src/App.css
:root {
  --accent-color: rgb(50, 50, 200);
}

@keyframes fadeIn {from {opacity: 0;} to {opacity: 1;}}

body {
  background: rgb(97, 144, 232);
  background: linear-gradient(130deg, rgb(11,100,225) 50%, rgb(9,121,84) 50%);
  margin: 0 auto;
  text-align: center;
  font-family: Lato;
  text-shadow: 2px rgba(170, 170, 170, 0.6), 1px 2px 2px 1px rgba(45, 45, 45, 0.45);
  min-height: 100vh;
}

#main {
  margin: 0 auto;
  max-width: 85vw;
  border-radius: 10px;
  background: rgba(0,0,0,0.6);
  animation: fadeIn ease-in 500ms;
}

#frost {
  background:rgba(125, 200, 100, 0.7);
  border-radius: inherit;
}

p {
  margin-top: 0;
  margin-bottom: 15px;
}

a {
  color: var(--accent-color);
  font-weight: 600;
  text-decoration: none;
  font-size: 1.2em;
}

img {
  max-width: 98%;
  max-height: 98%;
}

nav {
  width: 100%;
  padding: 10px 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background:rgb(90, 170, 30);
}

button {
  padding: 12px;
  text-transform: uppercase;
  font-weight: 600;
  background: rgba(190, 190, 190, 0.45);
  color: var(--accent-color);
  font-size: 1.2em;
  border: 3px solid var(--accent-color);
  margin: 0 3px;
}

.card {
  width: 30%;
  min-width: 350px;
  padding: 10px 5px;
  margin: 10px 0;
  border-radius: 5px;
  background: rgba(180, 180, 180, 0.3);
}

.container {
  padding: 5px 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  animation: fadeIn ease-in 350ms;
}

.header {
  margin: 0 2vw;
}

.projects {
  justify-content: space-around
}

.icon {
  margin: 0 2vw;
  font-size: 30px;
  color: var(--accent-color);
}

.icon :hover {
  color: rgba(75, 75, 200);
}

#headShot {
  width: 25vw;
  max-width: 350px;
  min-width: 200px;
}

#aboutText {
  text-align: left;
  padding: 0 10px;
  font-size: 1.85em;
  max-width: 85%;
}

@media only screen and (max-width: 800px) {
  nav {
    flex-direction: column;
  }
  #aboutText {
    font-size: 1.7em;
  }
}

@media only screen and (min-width: 1200px) {
  #headShot {
    max-width: 325px;
  }
  #aboutText {
    max-width: 65%;
  }
}

